# PExpr

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md
.github/workflows/: build.yml
cmake/: Documentation.cmake
src/: CMakeLists.txt  Closure.h  Definitions.h  Enums.cpp  Enums.h  Environment.cpp  Environment.h  Expression.h  Function.h  Location.h  LogListener.h  Logger.cpp  Logger.h  Lookup.h  PExpr.h  PExpr_Config.h  Statement.h  StringVisitor.h  TranspileVisitor.h  pexpr_config.h
src/internal/: ConsoleLogListener.cpp  ConsoleLogListener.h  DefContainer.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SymbolTable.h  Token.cpp  Token.h  Transpiler.h  TypeChecker.cpp  TypeChecker.h  VariableContainer.h
test/: CMakeLists.txt  checker.cpp  closures.pexpr  comments.pexpr  functions.pexpr  lexer.cpp  parser.cpp  stringvisitor.cpp  test1.pexpr  test2.pexpr  test3_err.pexpr  variables.pexpr
tools/: CMakeLists.txt
tools/pcalc/: CMakeLists.txt  main.cpp
